--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -17,6 +17,9 @@
             <li class="nav-item">
               <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink='/testsignalr' routerLinkActive='active'>SignalR</a>
+            </li>
         </ul>
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
             <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
